refactor loadflow related tests
Signed-off-by: Abdelsalem <abdelsalem.hedhili@rte-france.com>