@@ -4,24 +4,19 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package org.gridsuite.study.server;
+package org.gridsuite.study.server.loadflow;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
+import com.github.tomakehurst.wiremock.WireMockServer;
 import com.powsybl.commons.exceptions.UncheckedInterruptedException;
 import com.powsybl.iidm.network.TwoSides;
 import com.powsybl.loadflow.LoadFlowParameters;
 import com.powsybl.security.LimitViolationType;
-import lombok.SneakyThrows;
-import mockwebserver3.Dispatcher;
-import mockwebserver3.MockResponse;
-import mockwebserver3.MockWebServer;
-import mockwebserver3.RecordedRequest;
 import mockwebserver3.junit5.internal.MockWebServerExtension;
-import okhttp3.Headers;
-import okhttp3.HttpUrl;
+import org.gridsuite.study.server.ContextConfigurationWithTestChannel;
 import org.gridsuite.study.server.dto.*;
 import org.gridsuite.study.server.networkmodificationtree.dto.BuildStatus;
 import org.gridsuite.study.server.networkmodificationtree.dto.InsertMode;
@@ -35,11 +30,13 @@ import org.gridsuite.study.server.repository.StudyEntity;
 import org.gridsuite.study.server.repository.StudyRepository;
 import org.gridsuite.study.server.repository.rootnetwork.RootNetworkNodeInfoRepository;
 import org.gridsuite.study.server.service.*;
+import org.gridsuite.study.server.utils.SendInput;
 import org.gridsuite.study.server.utils.TestUtils;
 import org.gridsuite.study.server.utils.elasticsearch.DisableElasticsearch;
-import org.jetbrains.annotations.NotNull;
+import org.gridsuite.study.server.utils.wiremock.WireMockStubs;
 import org.json.JSONObject;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -52,7 +49,6 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.stream.binder.test.InputDestination;
 import org.springframework.cloud.stream.binder.test.OutputDestination;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
@@ -67,12 +63,14 @@ import org.springframework.web.client.HttpClientErrorException;
 
 import java.util.*;
 
+import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
 import static org.gridsuite.study.server.StudyConstants.HEADER_RECEIVER;
 import static org.gridsuite.study.server.StudyConstants.HEADER_USER_ID;
 import static org.gridsuite.study.server.dto.ComputationType.LOAD_FLOW;
 import static org.gridsuite.study.server.error.StudyBusinessErrorCode.NOT_FOUND;
 import static org.gridsuite.study.server.notification.NotificationService.*;
 import static org.gridsuite.study.server.utils.TestUtils.USER_DEFAULT_PROFILE_JSON;
+import static org.gridsuite.study.server.utils.wiremock.WireMockUtils.removeRequestForStub;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doAnswer;
@@ -108,7 +106,6 @@ class LoadFlowTest {
 
     private static final String PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING = "f09f5282-8e34-48b5-b66e-7ef9f3f36c4f";
     private static final String PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING = "1cec4a7b-ab7e-4d78-9dd7-ce73c5ef11d9";
-    private static final String PROFILE_LOADFLOW_DUPLICATED_PARAMETERS_UUID_STRING = "a4ce25e1-59a7-401d-abb1-04425fe24587";
     private static final String NO_PROFILE_USER_ID = "noProfileUser";
     private static final String NO_PARAMS_IN_PROFILE_USER_ID = "noParamInProfileUser";
     private static final String VALID_PARAMS_IN_PROFILE_USER_ID = "validParamInProfileUser";
@@ -116,7 +113,6 @@ class LoadFlowTest {
     private static final String USER_PROFILE_NO_PARAMS_JSON = "{\"id\":\"97bb1890-a90c-43c3-a004-e631246d42d6\",\"name\":\"Profile No params\"}";
     private static final String USER_PROFILE_VALID_PARAMS_JSON = "{\"id\":\"97bb1890-a90c-43c3-a004-e631246d42d6\",\"name\":\"Profile with valid params\",\"loadFlowParameterId\":\"" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING + "\",\"allParametersLinksValid\":true}";
     private static final String USER_PROFILE_INVALID_PARAMS_JSON = "{\"id\":\"97bb1890-a90c-43c3-a004-e631246d42d6\",\"name\":\"Profile with broken params\",\"loadFlowParameterId\":\"" + PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING + "\",\"allParametersLinksValid\":false}";
-    private static final String DUPLICATED_PARAMS_JSON = "\"" + PROFILE_LOADFLOW_DUPLICATED_PARAMETERS_UUID_STRING + "\"";
 
     private static final UUID LOADFLOW_PARAMETERS_UUID = UUID.fromString(LOADFLOW_PARAMETERS_UUID_STRING);
 
@@ -182,21 +178,25 @@ class LoadFlowTest {
     @Autowired
     private ConsumerService consumerService;
 
+    private static WireMockServer wireMockServer;
+    private WireMockStubs wireMockStubs;
+
+    @BeforeAll
+    static void initWireMock(@Autowired InputDestination input) {
+        wireMockServer = new WireMockServer(wireMockConfig().dynamicPort().extensions(new SendInput(input)));
+        wireMockServer.start();
+    }
+
     @BeforeEach
-    void setup(final MockWebServer server) throws Exception {
+    void setup() throws Exception {
         objectWriter = objectMapper.writer().withDefaultPrettyPrinter();
 
-        // Ask the server for its URL. You'll need this to make HTTP requests.
-        HttpUrl baseHttpUrl = server.url("");
-        String baseUrl = baseHttpUrl.toString().substring(0, baseHttpUrl.toString().length() - 1);
-        loadFlowService.setLoadFlowServerBaseUri(baseUrl);
-        reportService.setReportServerBaseUri(baseUrl);
-        userAdminService.setUserAdminServerBaseUri(baseUrl);
+        wireMockStubs = new WireMockStubs(wireMockServer);
+        reportService.setReportServerBaseUri(wireMockServer.baseUrl());
+        userAdminService.setUserAdminServerBaseUri(wireMockServer.baseUrl());
+        loadFlowService.setLoadFlowServerBaseUri(wireMockServer.baseUrl());
+        networkModificationService.setNetworkModificationServerBaseUri(wireMockServer.baseUrl());
 
-        String loadFlowResultUuidStr = objectMapper.writeValueAsString(LOADFLOW_RESULT_UUID);
-
-        String loadFlowErrorResultUuidStr = objectMapper.writeValueAsString(LOADFLOW_ERROR_RESULT_UUID);
-        String loadflowResult = TestUtils.resourceToString("/loadflow-result.json");
         List<LimitViolationInfos> limitViolations = List.of(LimitViolationInfos.builder()
                         .subjectId("lineId2")
                         .limit(100.)
@@ -246,104 +246,6 @@ class LoadFlowTest {
                 .build();
         LOADFLOW_PROFILE_PARAMETERS_JSON = objectMapper.writeValueAsString(profileLoadFlowParametersInfos);
 
-        final Dispatcher dispatcher = new Dispatcher() {
-            @SneakyThrows(JsonProcessingException.class)
-            @Override
-            @NotNull
-            public MockResponse dispatch(RecordedRequest request) {
-                String path = Objects.requireNonNull(request.getPath());
-                String method = Objects.requireNonNull(request.getMethod());
-                if (path.matches("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&applySolvedValues=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID_2 + ".*")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), loadFlowResultUuidStr);
-                } else if (path.matches("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&applySolvedValues=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID)) {
-                    input.send(MessageBuilder.withPayload("")
-                            .setHeader("receiver", "%7B%22nodeUuid%22%3A%22" + request.getPath().split("%")[5].substring(4) + "%22%2C%20%22rootNetworkUuid%22%3A%20%22" + request.getPath().split("%")[11].substring(4) + "%22%2C%20%22userId%22%3A%22userId%22%7D")
-                            .build(), LOADFLOW_FAILED_DESTINATION);
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), loadFlowErrorResultUuidStr);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID)) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), loadflowResult);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "\\?filters=.*globalFilters=.*networkUuid=.*variantId.*sort=.*")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), loadflowResult);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/status")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), objectMapper.writeValueAsString(LoadFlowStatus.CONVERGED));
-                } else if (path.matches("/v1/results/" + LOADFLOW_ERROR_RESULT_UUID + "/status")) {
-                    return new MockResponse(404);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/limit-violations")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), LIMIT_VIOLATIONS_JSON);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/limit-violations\\?filters=.*globalFilters=.*networkUuid=.*variantId.*sort=.*")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), LIMIT_VIOLATIONS_JSON);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/computation-status")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), COMPUTING_STATUS_JSON);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/computation")) {
-                    return new MockResponse(404);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/modifications")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), "loadflow modifications mock");
-                } else if (path.matches("/v1/results/" + LOADFLOW_ERROR_RESULT_UUID + "/modifications")) {
-                    return new MockResponse(404);
-                } else if (path.matches("/v1/results/invalidate-status\\?resultUuid=" + LOADFLOW_RESULT_UUID)) {
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/results/invalidate-status\\?resultUuid=" + LOADFLOW_RESULT_UUID + "&resultUuid=" + LOADFLOW_OTHER_NODE_RESULT_UUID)) {
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/stop.*")
-                        || path.matches("/v1/results/" + LOADFLOW_OTHER_NODE_RESULT_UUID + "/stop.*")) {
-                    String resultUuid = path.matches(".*variantId=" + VARIANT_ID_2 + ".*") ? LOADFLOW_OTHER_NODE_RESULT_UUID : LOADFLOW_RESULT_UUID;
-                    input.send(MessageBuilder.withPayload("")
-                            .setHeader("resultUuid", resultUuid)
-                            .setHeader("receiver", "%7B%22nodeUuid%22%3A%22" + request.getPath().split("%")[5].substring(4) + "%22%2C%20%22rootNetworkUuid%22%3A%20%22" + request.getPath().split("%")[11].substring(4) + "%22%2C%20%22userId%22%3A%22userId%22%7D")
-                            .build(), LOADFLOW_STOPPED_DESTINATION);
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/results\\?resultsUuids.*")) {
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/reports")) {
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/supervision/results-count")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), "1");
-                } else if (path.matches("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING)) {
-                    if (method.equals("GET")) {
-                        return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), LOADFLOW_DEFAULT_PARAMETERS_JSON);
-                    } else {
-                        return new MockResponse(200);
-                    }
-                } else if (path.matches("/v1/parameters")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), objectMapper.writeValueAsString(LOADFLOW_PARAMETERS_UUID_STRING));
-                } else if (path.matches("/v1/users/" + NO_PROFILE_USER_ID + "/profile")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), USER_DEFAULT_PROFILE_JSON);
-                } else if (path.matches("/v1/users/" + NO_PARAMS_IN_PROFILE_USER_ID + "/profile")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), USER_PROFILE_NO_PARAMS_JSON);
-                } else if (path.matches("/v1/users/" + VALID_PARAMS_IN_PROFILE_USER_ID + "/profile")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), USER_PROFILE_VALID_PARAMS_JSON);
-                } else if (path.matches("/v1/users/" + INVALID_PARAMS_IN_PROFILE_USER_ID + "/profile")) {
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), USER_PROFILE_INVALID_PARAMS_JSON);
-                } else if (path.matches("/v1/parameters\\?duplicateFrom=" + PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING) && method.equals("POST")) {
-                    // params duplication request KO
-                    return new MockResponse(404);
-                } else if (path.matches("/v1/parameters/" + PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING) && method.equals("GET")) {
-                    return new MockResponse(404);
-                } else if (path.matches("/v1/parameters\\?duplicateFrom=" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING) && method.equals("POST")) {
-                    // params duplication request OK
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), DUPLICATED_PARAMS_JSON);
-                } else if (path.matches("/v1/parameters/" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING) && method.equals("GET")) {
-                    // profile params get request OK
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE), LOADFLOW_PROFILE_PARAMETERS_JSON);
-                } else if (path.matches("/v1/parameters/" + PROFILE_LOADFLOW_DUPLICATED_PARAMETERS_UUID_STRING + "/provider") && method.equals("PUT")) {
-                    // provider update in duplicated params OK
-                    return new MockResponse(200);
-                } else if (path.matches("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID + "/provider") && method.equals("GET")) {
-                    // provider update in duplicated params OK
-                    return new MockResponse.Builder().code(200).body(DEFAULT_PROVIDER).build();
-                } else if (path.matches("/v1/parameters/default") && method.equals("POST")) {
-                    // create default parameters request
-                    return new MockResponse(200, Headers.of(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE),
-                            objectMapper.writeValueAsString(LOADFLOW_PARAMETERS_UUID_STRING));
-                } else if (path.matches("/v1/default-provider")) {
-                    return new MockResponse.Builder().code(200).body(DEFAULT_PROVIDER).build();
-                } else {
-                    LOGGER.error("Unhandled method+path: {} {}", request.getMethod(), request.getPath());
-                    return new MockResponse.Builder().code(418).body("Unhandled method+path: " + request.getMethod() + " " + request.getPath()).build();
-                }
-            }
-        };
-        server.setDispatcher(dispatcher);
     }
 
     private void assertNodeBlocked(UUID nodeUuid, UUID rootNetworkUuid, boolean isNodeBlocked) {
@@ -368,7 +270,7 @@ class LoadFlowTest {
     }
 
     @Test
-    void testLoadFlow(final MockWebServer server) throws Exception {
+    void testLoadFlow() throws Exception {
         //insert a study
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
@@ -393,39 +295,43 @@ class LoadFlowTest {
             .andExpect(status().isForbidden());
 
         // run LF with failed status
-        testLoadFlowFailed(server, studyNameUserIdUuid, modificationNode2.getId());
+        testLoadFlowFailed(studyNameUserIdUuid, modificationNode2.getId());
 
         // run LF with construction node
-        testLoadFlow(server, studyNameUserIdUuid, modificationNode3);
+        testLoadFlow(studyNameUserIdUuid, modificationNode3);
 
         // run LF with security node
-        testLoadFlow(server, studyNameUserIdUuid, modificationNode4);
+        testLoadFlow(studyNameUserIdUuid, modificationNode4);
     }
 
-    private void testLoadFlow(final MockWebServer server, UUID studyNameUserIdUuid, NetworkModificationNode modificationNode) throws Exception {
+    private void testLoadFlow(UUID studyNameUserIdUuid, NetworkModificationNode modificationNode) throws Exception {
         UUID firstRootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyNameUserIdUuid);
         UUID modificationNodeUuid = modificationNode.getId();
+        UUID networkUuid = studyTestUtils.getNetworkUuid(studyNameUserIdUuid);
+        UUID loadFlowProviderStubId = wireMockStubs.loadflowServer.stubGetLoadflowProvider(LOADFLOW_PARAMETERS_UUID.toString(), DEFAULT_PROVIDER);
+        UUID runLoadFlowStubId = wireMockStubs.loadflowServer.stubRunLoadflow(networkUuid, objectMapper.writeValueAsString(LOADFLOW_ERROR_RESULT_UUID));
 
         // run a loadflow
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/run", studyNameUserIdUuid, firstRootNetworkUuid, modificationNodeUuid)
                 .header("userId", "userId"))
             .andExpect(status().isOk());
 
-        // running loadflow invalidate node children and their computations
-        if (modificationNode.isSecurityNode()) {
+        wireMockStubs.loadflowServer.verifyRunLoadflow(runLoadFlowStubId, networkUuid);
+
+        if (!modificationNode.isSecurityNode()) {
+            wireMockStubs.loadflowServer.verifyGetLoadflowProvider(loadFlowProviderStubId, LOADFLOW_PARAMETERS_UUID.toString());
+        } else {
+            // running loadflow invalidate node children and their computations
             checkUpdateModelsStatusMessagesReceived(studyNameUserIdUuid, modificationNodeUuid);
+            removeRequestForStub(wireMockServer, loadFlowProviderStubId, 0);
         }
 
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS);
 
-        List<String> expectedRequestsPatterns = new ArrayList<>();
-        expectedRequestsPatterns.add("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID_2);
-        if (!modificationNode.isSecurityNode()) {
-            expectedRequestsPatterns.add("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID + "/provider");
-        }
-        assertRequestsDone(server, expectedRequestsPatterns);
-
         consumeLoadFlowResult(studyNameUserIdUuid, firstRootNetworkUuid, modificationNode);
+
+        UUID loadflowResultUuid = rootNetworkNodeInfoService.getComputationResultUuid(modificationNodeUuid, firstRootNetworkUuid, LOAD_FLOW);
+        UUID stubGetLoadflowResultUuid = wireMockStubs.loadflowServer.stubGetLoadflowResult(loadflowResultUuid, TestUtils.resourceToString("/loadflow-result.json"));
 
         // get loadflow result
         MvcResult mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/result", studyNameUserIdUuid, firstRootNetworkUuid, modificationNodeUuid)).andExpectAll(
@@ -433,49 +339,44 @@ class LoadFlowTest {
 
         assertEquals(TestUtils.resourceToString("/loadflow-result.json"), mvcResult.getResponse().getContentAsString());
 
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID)));
+        wireMockStubs.loadflowServer.verifyGetLoadflowResult(stubGetLoadflowResultUuid, loadflowResultUuid);
 
         // get loadflow status
+        UUID getLoadFlowStatusStubUuid = wireMockStubs.loadflowServer.stubGetLoadflowStatus(loadflowResultUuid, objectMapper.writeValueAsString(LoadFlowStatus.CONVERGED), false);
         mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/status?withRatioTapChangers={withRatioTapChangers}", studyNameUserIdUuid, firstRootNetworkUuid, modificationNodeUuid, false))
             .andExpect(status().isOk())
             .andReturn();
         assertEquals(LoadFlowStatus.CONVERGED.name(), mvcResult.getResponse().getContentAsString());
-
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/status")));
+        wireMockStubs.loadflowServer.verifyGetLoadflowStatus(getLoadFlowStatusStubUuid, loadflowResultUuid);
 
         // stop loadflow
+        UUID stopLoadFlowStatusStubUuid = wireMockStubs.loadflowServer.stubStopLoadflow(loadflowResultUuid, modificationNodeUuid, firstRootNetworkUuid, objectMapper.writeValueAsString(LoadFlowStatus.CONVERGED));
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/stop?withRatioTapChangers={withRatioTapChangers}", studyNameUserIdUuid, firstRootNetworkUuid, modificationNodeUuid, false)
                 .header(HEADER_USER_ID, "userId"))
             .andExpect(status().isOk());
-
+        wireMockStubs.loadflowServer.verifyStopLoadflow(stopLoadFlowStatusStubUuid, loadflowResultUuid);
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS, NotificationService.UPDATE_TYPE_LOADFLOW_RESULT);
-
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/stop\\?receiver=.*nodeUuid.*")));
     }
 
-    private void testLoadFlowFailed(final MockWebServer server, UUID studyNameUserIdUuid, UUID modificationNodeUuid) throws Exception {
+    private void testLoadFlowFailed(UUID studyNameUserIdUuid, UUID modificationNodeUuid) throws Exception {
         UUID firstRootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyNameUserIdUuid);
+        UUID networkUuid = studyTestUtils.getNetworkUuid(studyNameUserIdUuid);
+        UUID loadFlowProviderStubId = wireMockStubs.loadflowServer.stubGetLoadflowProvider(LOADFLOW_PARAMETERS_UUID.toString(), DEFAULT_PROVIDER);
+        UUID runLoadFlowStubId = wireMockStubs.loadflowServer.stubRunLoadflowFailed(networkUuid, modificationNodeUuid, objectMapper.writeValueAsString(LOADFLOW_ERROR_RESULT_UUID));
 
         // loadflow failed
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/run", studyNameUserIdUuid, firstRootNetworkUuid, modificationNodeUuid)
                         .header("userId", "userId"))
                 .andExpect(status().isOk());
 
-        checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_FAILED);
+        wireMockStubs.loadflowServer.verifyGetLoadflowProvider(loadFlowProviderStubId, LOADFLOW_PARAMETERS_UUID.toString());
+        wireMockStubs.loadflowServer.verifyRunLoadflow(runLoadFlowStubId, networkUuid);
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS);
-
-        assertRequestsDone(server, List.of("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID + "/provider", "/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID));
-    }
-
-    private static void assertRequestsDone(MockWebServer server, List<String> expectedPatterns) {
-        var requests = TestUtils.getRequestsDone(expectedPatterns.size(), server);
-        for (String pattern : expectedPatterns) {
-            assertTrue(requests.stream().anyMatch(r -> r.matches(pattern)));
-        }
+        checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_FAILED);
     }
 
     @Test
-    void testGetLimitViolations(final MockWebServer server) throws Exception {
+    void testGetLimitViolations() throws Exception {
         //insert a study
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
@@ -483,47 +384,49 @@ class LoadFlowTest {
         UUID rootNodeUuid = getRootNode(studyNameUserIdUuid).getId();
         NetworkModificationNode modificationNode1 = createNetworkModificationNode(studyNameUserIdUuid, rootNodeUuid, UUID.randomUUID(), VARIANT_ID_2, "node 1", NetworkModificationNodeType.SECURITY);
         UUID modificationNode1Uuid = modificationNode1.getId();
+        UUID networkUuid = studyTestUtils.getNetworkUuid(studyNameUserIdUuid);
 
+        UUID stubRunLoadflowUuid = wireMockStubs.loadflowServer.stubRunLoadflow(networkUuid, objectMapper.writeValueAsString(LOADFLOW_RESULT_UUID));
         //run a loadflow
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/run", studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid)
                         .header("userId", "userId"))
                 .andExpect(status().isOk())
                 .andReturn();
+        wireMockStubs.loadflowServer.verifyRunLoadflow(stubRunLoadflowUuid, networkUuid);
 
         // running loadflow (with security node) invalidate node children and their computations
         checkUpdateModelsStatusMessagesReceived(studyNameUserIdUuid, modificationNode1Uuid);
 
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS);
-        assertRequestsDone(server, List.of("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID_2));
 
         consumeLoadFlowResult(studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1);
 
+        UUID stubGetComputationStatusUuid = wireMockStubs.loadflowServer.stubGetComputationStatus(LOADFLOW_RESULT_UUID, COMPUTING_STATUS_JSON);
         // get computing status
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/computation/result/enum-values?computingType={computingType}&enumName={enumName}",
                         studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid, LOAD_FLOW, "computation-status"))
                 .andExpectAll(status().isOk(),
                         content().string(COMPUTING_STATUS_JSON));
+        wireMockStubs.loadflowServer.verifyGetComputationStatus(stubGetComputationStatusUuid, LOADFLOW_RESULT_UUID);
 
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/computation-status")));
-
+        UUID stubGetComputationUuid = wireMockStubs.loadflowServer.stubGetComputation(LOADFLOW_RESULT_UUID);
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/computation/result/enum-values?computingType={computingType}&enumName={enumName}",
                         studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid, LOAD_FLOW, "computation")).andReturn();
+        wireMockStubs.loadflowServer.verifyGetComputation(stubGetComputationUuid, LOADFLOW_RESULT_UUID);
 
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/computation")));
-
+        UUID stubGetLimitViolationsUuid = wireMockStubs.loadflowServer.stubGetLimitViolation(LOADFLOW_RESULT_UUID, LIMIT_VIOLATIONS_JSON, false);
         // get limit violations
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/limit-violations", studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid)).andExpectAll(
                 status().isOk(),
                 content().string(LIMIT_VIOLATIONS_JSON));
+        wireMockStubs.loadflowServer.verifyGetLimitViolation(stubGetLimitViolationsUuid, LOADFLOW_RESULT_UUID, false);
 
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/limit-violations")));
-
+        stubGetLimitViolationsUuid = wireMockStubs.loadflowServer.stubGetLimitViolation(LOADFLOW_RESULT_UUID, LIMIT_VIOLATIONS_JSON, true);
         // get limit violations with filters, globalFilters and sort
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/limit-violations?filters=lineId2&sort=subjectId,ASC&globalFilters=ss", studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid)).andExpectAll(
                 status().isOk(),
                 content().string(LIMIT_VIOLATIONS_JSON));
-
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_RESULT_UUID + "/limit-violations\\?filters=lineId2&globalFilters=ss&networkUuid=" + NETWORK_UUID_STRING + "&variantId=" + VARIANT_ID_2 + "&sort=subjectId,ASC")));
+        wireMockStubs.loadflowServer.verifyGetLimitViolation(stubGetLimitViolationsUuid, LOADFLOW_RESULT_UUID, true);
 
         // get limit violations on non existing node
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/limit-violations", studyNameUserIdUuid, firstRootNetworkUuid, UUID.randomUUID())).andExpectAll(
@@ -531,37 +434,40 @@ class LoadFlowTest {
     }
 
     @Test
-    void testInvalidateStatus(final MockWebServer server) throws Exception {
+    void testInvalidateStatus() throws Exception {
         //insert a study
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
+        UUID networkUuid = studyTestUtils.getNetworkUuid(studyNameUserIdUuid);
         UUID firstRootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyNameUserIdUuid);
         UUID rootNodeUuid = getRootNode(studyNameUserIdUuid).getId();
         NetworkModificationNode modificationNode1 = createNetworkModificationNode(studyNameUserIdUuid, rootNodeUuid, UUID.randomUUID(), VARIANT_ID_2, "node 1", NetworkModificationNodeType.SECURITY);
         UUID modificationNode1Uuid = modificationNode1.getId();
 
+        UUID runLoadFlowStubId = wireMockStubs.loadflowServer.stubRunLoadflow(networkUuid, objectMapper.writeValueAsString(LOADFLOW_RESULT_UUID));
         // run a loadflow
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/run", studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1Uuid)
                         .header("userId", "userId"))
                 .andExpect(status().isOk())
                 .andReturn();
+        wireMockStubs.loadflowServer.verifyRunLoadflow(runLoadFlowStubId, networkUuid);
 
         // running loadflow (with security node) invalidate children and their computations
         checkUpdateModelsStatusMessagesReceived(studyNameUserIdUuid, modificationNode1Uuid);
 
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS);
-        assertRequestsDone(server, List.of("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID_2));
 
         consumeLoadFlowResult(studyNameUserIdUuid, firstRootNetworkUuid, modificationNode1);
     }
 
     @Test
-    void testDeleteLoadFlowResults(final MockWebServer server) throws Exception {
+    void testDeleteLoadFlowResults() throws Exception {
         //insert a study
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
         UUID firstRootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyNameUserIdUuid);
         UUID rootNodeUuid = getRootNode(studyNameUserIdUuid).getId();
+        UUID networkUuid = studyTestUtils.getNetworkUuid(studyNameUserIdUuid);
         NetworkModificationNode modificationNode1 = createNetworkModificationConstructionNode(studyNameUserIdUuid, rootNodeUuid,
                 UUID.randomUUID(), VARIANT_ID, "node 1");
         UUID modificationNode1Uuid = modificationNode1.getId();
@@ -578,23 +484,23 @@ class LoadFlowTest {
         rootNetworkNodeInfoEntity3.setNodeBuildStatus(NodeBuildStatusEmbeddable.from(BuildStatus.BUILT));
         rootNetworkNodeInfoRepository.save(rootNetworkNodeInfoEntity3);
 
+        UUID runLoadFlowStubId = wireMockStubs.loadflowServer.stubRunLoadflow(networkUuid, objectMapper.writeValueAsString(LOADFLOW_RESULT_UUID));
         //run a loadflow
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/run", studyNameUserIdUuid, firstRootNetworkUuid, modificationNode3Uuid)
                         .header("userId", "userId"))
                 .andExpect(status().isOk());
+        wireMockStubs.loadflowServer.verifyRunLoadflow(runLoadFlowStubId, networkUuid);
 
         // running loadflow ((with security node)) invalidate node children and their computations
         checkUpdateModelsStatusMessagesReceived(studyNameUserIdUuid, modificationNode3Uuid);
-
         checkUpdateModelStatusMessagesReceived(studyNameUserIdUuid, NotificationService.UPDATE_TYPE_LOADFLOW_STATUS);
-        assertRequestsDone(server, List.of("/v1/networks/" + NETWORK_UUID_STRING + "/run-and-save\\?withRatioTapChangers=.*&receiver=.*&reportUuid=.*&reporterId=.*&variantId=" + VARIANT_ID_2));
-
         consumeLoadFlowResult(studyNameUserIdUuid, firstRootNetworkUuid, modificationNode3);
 
         //Test result count
-        testResultCount(server);
+        testResultCount();
+
         //Delete Voltage init results
-        testDeleteResults(studyNameUserIdUuid, 1, server);
+        testDeleteResults(studyNameUserIdUuid, 1);
     }
 
     @Test
@@ -642,32 +548,34 @@ class LoadFlowTest {
         checkUpdateModelStatusMessagesReceived(studyUuid, updateTypeToCheck, null);
     }
 
-    private void testResultCount(final MockWebServer server) throws Exception {
+    private void testResultCount() throws Exception {
+        UUID stubGetResultsCountUuid = wireMockStubs.loadflowServer.stubGetResultsCount(objectMapper.writeValueAsString(1));
         mockMvc.perform(delete("/v1/supervision/computation/results")
                         .queryParam("type", LOAD_FLOW.toString())
                         .queryParam("dryRun", "true"))
                 .andExpect(status().isOk());
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/supervision/results-count")));
+        wireMockStubs.loadflowServer.verifyGetResultsCount(stubGetResultsCountUuid);
     }
 
-    private void testDeleteResults(UUID studyUuid, int expectedInitialResultCount, final MockWebServer server) throws Exception {
+    private void testDeleteResults(UUID studyUuid, int expectedInitialResultCount) throws Exception {
         List<RootNetworkNodeInfoEntity> rootNetworkNodeInfoEntities = rootNetworkNodeInfoRepository.findAllByLoadFlowResultUuidNotNull();
-        RootNetworkNodeInfoEntity rootNetworkNodeInfoEntity = rootNetworkNodeInfoEntities.get(0);
+        RootNetworkNodeInfoEntity rootNetworkNodeInfoEntity = rootNetworkNodeInfoEntities.getFirst();
 
         assertEquals(expectedInitialResultCount, rootNetworkNodeInfoEntities.size());
+        UUID stubDeleteLoadflowResultsUuid = wireMockStubs.loadflowServer.stubDeleteLoadflowResults(LOADFLOW_RESULT_UUID);
+        UUID stubDeleteReportsUuid = wireMockStubs.reportServer.stubDeleteReports();
         mockMvc.perform(delete("/v1/supervision/computation/results")
                         .queryParam("type", LOAD_FLOW.toString())
                         .queryParam("dryRun", "false"))
                 .andExpect(status().isOk());
+        wireMockStubs.loadflowServer.verifyDeleteLoadflowResults(stubDeleteLoadflowResultsUuid);
+        wireMockStubs.reportServer.verifyDeleteReports(stubDeleteReportsUuid);
 
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.matches("/v1/results\\?resultsUuids=" + rootNetworkNodeInfoEntity.getLoadFlowResultUuid())));
-        assertTrue(requests.stream().anyMatch(r -> r.matches("/v1/reports")));
         assertEquals(0, rootNetworkNodeInfoRepository.findAllByLoadFlowResultUuidNotNull().size());
 
         checkUpdateModelsStatusMessagesReceived(studyUuid);
 
-        assertEquals(BuildStatus.NOT_BUILT, rootNetworkNodeInfoRepository.findById(rootNetworkNodeInfoEntity.getId()).get().getNodeBuildStatus().getLocalBuildStatus());
+        assertEquals(BuildStatus.NOT_BUILT, rootNetworkNodeInfoRepository.findById(rootNetworkNodeInfoEntity.getId()).orElseThrow().getNodeBuildStatus().getLocalBuildStatus());
     }
 
     @Test
@@ -694,14 +602,85 @@ class LoadFlowTest {
                 .header(HEADER_USER_ID, "userId")).andExpect(status().isOk());
     }
 
-    private void createOrUpdateParametersAndDoChecks(UUID studyNameUserIdUuid, String parameters, String userId, HttpStatusCode status) throws Exception {
+    private void updateParametersAndDoChecks(UUID studyNameUserIdUuid, String parameters, String loadflowParametersUuid, String userId, HttpStatusCode status, String returnedUserProfileJson, boolean shouldDuplicate, String duplicateFromUuid, boolean duplicateIsNotFound) throws Exception {
+        UUID stubPutLoadflowParametersUuid = wireMockStubs.loadflowServer.stubPutLoadflowParameters(loadflowParametersUuid, parameters);
+        UUID duplicatedLoadflowParametersUuid = UUID.randomUUID();
+        UUID stubGetUserProfileUuid = null;
+        UUID stubDuplicateLoadflowParametersUuid = null;
+        if (parameters == null || parameters.isEmpty()) {
+            stubGetUserProfileUuid = wireMockStubs.userAdminServer.stubGetUserProfile(userId, returnedUserProfileJson);
+        }
+        if (shouldDuplicate) {
+            stubDuplicateLoadflowParametersUuid = wireMockStubs.loadflowServer.stubDuplicateLoadflowParameters(duplicateFromUuid, objectMapper.writeValueAsString(duplicatedLoadflowParametersUuid), duplicateIsNotFound);
+        }
         mockMvc.perform(
                 post("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)
                     .header("userId", userId)
                     .contentType(MediaType.ALL)
-                    .content(parameters))
+                    .content(parameters == null ? "" : parameters))
                 .andExpect(status().is(status.value()));
+        wireMockStubs.loadflowServer.verifyPutLoadflowParameters(stubPutLoadflowParametersUuid, loadflowParametersUuid, parameters);
+        if (stubGetUserProfileUuid != null) {
+            wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfileUuid, userId);
+        }
+        if (stubDuplicateLoadflowParametersUuid != null) {
+            wireMockStubs.loadflowServer.verifyDuplicateLoadflowParameters(stubDuplicateLoadflowParametersUuid, duplicateFromUuid);
+        }
+        testMessages(studyNameUserIdUuid);
+    }
 
+    private void updateParametersAndDoChecksForResetLoadFlowParameters(UUID studyNameUserIdUuid, String loadflowParametersUuid, String userId, String returnedUserProfileJson, String duplicateFromUuid, String returnedLoadFlowParameters) throws Exception {
+        UUID duplicatedLoadflowParametersUuid = UUID.randomUUID();
+        UUID stubGetUserProfileUuid = wireMockStubs.userAdminServer.stubGetUserProfile(userId, returnedUserProfileJson);
+        UUID stubDuplicateLoadflowParametersUuid = wireMockStubs.loadflowServer.stubDuplicateLoadflowParameters(duplicateFromUuid, objectMapper.writeValueAsString(duplicatedLoadflowParametersUuid), false);
+        UUID stubGetLoadflowParamtersUuid = wireMockStubs.loadflowServer.stubGetLoadflowParameters(loadflowParametersUuid, returnedLoadFlowParameters, false);
+        UUID stubPutLoadflowProviderUuid = wireMockStubs.loadflowServer.stubPutLoadflowProvider(duplicatedLoadflowParametersUuid.toString(), PROVIDER);
+        UUID stubDeleteLoadflowParametersUuid = wireMockStubs.loadflowServer.stubDeleteLoadFlowParameters(loadflowParametersUuid);
+
+        mockMvc.perform(
+                        post("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)
+                                .header("userId", userId)
+                                .contentType(MediaType.ALL)
+                                .content(""))
+                .andExpect(status().is(HttpStatus.OK.value()));
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfileUuid, userId);
+        wireMockStubs.loadflowServer.verifyDuplicateLoadflowParameters(stubDuplicateLoadflowParametersUuid, duplicateFromUuid);
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetLoadflowParamtersUuid, loadflowParametersUuid);
+        wireMockStubs.loadflowServer.verifyPutLoadflowProvider(stubPutLoadflowProviderUuid, duplicatedLoadflowParametersUuid.toString());
+        wireMockStubs.loadflowServer.verifyDeleteLoadFlowParameters(stubDeleteLoadflowParametersUuid, loadflowParametersUuid);
+
+        testMessages(studyNameUserIdUuid);
+    }
+
+    private void createParametersAndDoChecks(UUID studyNameUserIdUuid, String parameters, String userId, String returnedUserProfileJson, boolean shouldDuplicate, String duplicateFromUuid) throws Exception {
+        String createdLoadflowParametersUuid = UUID.randomUUID().toString();
+        UUID stubCreatedLoadflowParametersUuid = wireMockStubs.loadflowServer.stubCreateLoadflowParameters(objectMapper.writeValueAsString(createdLoadflowParametersUuid));
+        UUID stubDuplicateParametersUuid = null;
+        UUID stubGetUserProfileUuid = null;
+        if (parameters == null || parameters.isEmpty()) {
+            stubGetUserProfileUuid = wireMockStubs.userAdminServer.stubGetUserProfile(userId, returnedUserProfileJson);
+        }
+        if (shouldDuplicate) {
+            stubDuplicateParametersUuid = wireMockStubs.loadflowServer.stubDuplicateLoadflowParameters(duplicateFromUuid, objectMapper.writeValueAsString(UUID.randomUUID()), false);
+        }
+        mockMvc.perform(
+                        post("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)
+                                .header("userId", userId)
+                                .contentType(MediaType.ALL)
+                                .content(parameters == null ? "" : parameters))
+                .andExpect(status().is(HttpStatus.OK.value()));
+        if (stubGetUserProfileUuid != null) {
+            wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfileUuid, userId);
+        }
+        if (shouldDuplicate) {
+            wireMockStubs.loadflowServer.verifyDuplicateLoadflowParameters(stubDuplicateParametersUuid, duplicateFromUuid);
+        } else {
+            wireMockStubs.loadflowServer.verifyCreateLoadflowParameters(stubCreatedLoadflowParametersUuid);
+        }
+        testMessages(studyNameUserIdUuid);
+    }
+
+    private void testMessages(UUID studyNameUserIdUuid) {
         Message<byte[]> message = output.receive(TIMEOUT, STUDY_UPDATE_DESTINATION);
         assertEquals(studyNameUserIdUuid, message.getHeaders().get(NotificationService.HEADER_STUDY_UUID));
         assertEquals(NotificationService.UPDATE_TYPE_LOADFLOW_STATUS, message.getHeaders().get(NotificationService.HEADER_UPDATE_TYPE));
@@ -721,146 +700,128 @@ class LoadFlowTest {
     }
 
     @Test
-    void testResetLoadFlowParametersUserHasNoProfile(final MockWebServer server) throws Exception {
+    void testResetLoadFlowParametersUserHasNoProfile() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, "", NO_PROFILE_USER_ID, HttpStatus.OK);
-
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + NO_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING))); // update existing with dft
+        updateParametersAndDoChecks(studyNameUserIdUuid, "", LOADFLOW_PARAMETERS_UUID_STRING, NO_PROFILE_USER_ID, HttpStatus.OK, USER_DEFAULT_PROFILE_JSON, false, null, false);
     }
 
     @Test
-    void testResetLoadFlowParametersUserHasNoParamsInProfile(final MockWebServer server) throws Exception {
+    void testResetLoadFlowParametersUserHasNoParamsInProfile() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, "", NO_PARAMS_IN_PROFILE_USER_ID, HttpStatus.OK);
-
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + NO_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING))); // update existing with dft
+        updateParametersAndDoChecks(studyNameUserIdUuid, "", LOADFLOW_PARAMETERS_UUID_STRING, NO_PARAMS_IN_PROFILE_USER_ID, HttpStatus.OK, USER_PROFILE_NO_PARAMS_JSON, false, null, false);
     }
 
     @Test
-    void testResetLoadFlowParametersUserHasInvalidParamsInProfile(final MockWebServer server) throws Exception {
+    void testResetLoadFlowParametersUserHasInvalidParamsInProfile() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, "", INVALID_PARAMS_IN_PROFILE_USER_ID, HttpStatus.NO_CONTENT);
-
-        var requests = TestUtils.getRequestsDone(3, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + INVALID_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING))); // update existing with dft
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters?duplicateFrom=" + PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING))); // post duplicate ko
+        updateParametersAndDoChecks(studyNameUserIdUuid, "", LOADFLOW_PARAMETERS_UUID_STRING, INVALID_PARAMS_IN_PROFILE_USER_ID, HttpStatus.NO_CONTENT, USER_PROFILE_INVALID_PARAMS_JSON, true, PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING, true);
     }
 
     @Test
-    void testResetLoadFlowParametersUserHasValidParamsInProfile(final MockWebServer server) throws Exception {
+    void testResetLoadFlowParametersUserHasValidParamsInProfile() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, "", VALID_PARAMS_IN_PROFILE_USER_ID, HttpStatus.OK);
-
-        var requests = TestUtils.getRequestsDone(5, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + VALID_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING))); // 2 requests: 1 get for provider and then delete existing
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters?duplicateFrom=" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING))); // post duplicate ok
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + PROFILE_LOADFLOW_DUPLICATED_PARAMETERS_UUID_STRING + "/provider"))); // patch duplicated params for provider
+        updateParametersAndDoChecksForResetLoadFlowParameters(studyNameUserIdUuid, LOADFLOW_PARAMETERS_UUID_STRING, VALID_PARAMS_IN_PROFILE_USER_ID, USER_PROFILE_VALID_PARAMS_JSON, PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING, LOADFLOW_DEFAULT_PARAMETERS_JSON);
     }
 
     @Test
-    void testResetLoadFlowParametersUserHasValidParamsInProfileButNoExistingLoadflowParams(final MockWebServer server) throws Exception {
+    void testResetLoadFlowParametersUserHasValidParamsInProfileButNoExistingLoadflowParams() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, null);
         UUID studyNameUserIdUuid = studyEntity.getId();
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, "", VALID_PARAMS_IN_PROFILE_USER_ID, HttpStatus.OK);
-
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + VALID_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters?duplicateFrom=" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING))); // post duplicate ok
+        createParametersAndDoChecks(studyNameUserIdUuid, "", VALID_PARAMS_IN_PROFILE_USER_ID, USER_PROFILE_VALID_PARAMS_JSON, true, PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING);
     }
 
     // the following testGetDefaultProviders tests are related to StudyTest::testGetDefaultProviders but with a user and different profile cases
     @Test
-    void testGetDefaultProvidersFromProfile(final MockWebServer server) throws Exception {
+    void testGetDefaultProvidersFromProfile() throws Exception {
+        UUID stubGetUserProfileUuid = wireMockStubs.userAdminServer.stubGetUserProfile(VALID_PARAMS_IN_PROFILE_USER_ID, USER_PROFILE_VALID_PARAMS_JSON);
+        UUID stubGetParameters = wireMockStubs.loadflowServer.stubGetLoadflowParameters(PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING, LOADFLOW_PROFILE_PARAMETERS_JSON, false);
         mockMvc.perform(get("/v1/loadflow-default-provider").header(USER_ID_HEADER, VALID_PARAMS_IN_PROFILE_USER_ID)).andExpectAll(
                 status().isOk(),
                 content().string(OTHER_PROVIDER));
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + VALID_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING))); // GET provider
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfileUuid, VALID_PARAMS_IN_PROFILE_USER_ID);
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetParameters, PROFILE_LOADFLOW_VALID_PARAMETERS_UUID_STRING);
     }
 
     @Test
-    void testGetDefaultProvidersFromProfileInvalid(final MockWebServer server) throws Exception {
+    void testGetDefaultProvidersFromProfileInvalid() throws Exception {
+        UUID stubGetUserProfileUuid = wireMockStubs.userAdminServer.stubGetUserProfile(INVALID_PARAMS_IN_PROFILE_USER_ID, USER_PROFILE_INVALID_PARAMS_JSON);
+        UUID stubGetParameters = wireMockStubs.loadflowServer.stubGetLoadflowParameters(PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING, null, true);
+        UUID stubGetDefaultParameters = wireMockStubs.loadflowServer.stubGetDefaultProvider(DEFAULT_PROVIDER);
         mockMvc.perform(get("/v1/loadflow-default-provider").header(USER_ID_HEADER, INVALID_PARAMS_IN_PROFILE_USER_ID)).andExpectAll(
                 status().isOk(),
                 content().string(DEFAULT_PROVIDER));
-        var requests = TestUtils.getRequestsDone(3, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + INVALID_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING))); // GET provider
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/default-provider"))); // GET fallback default provider
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfileUuid, INVALID_PARAMS_IN_PROFILE_USER_ID);
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetParameters, PROFILE_LOADFLOW_INVALID_PARAMETERS_UUID_STRING);
+        wireMockStubs.loadflowServer.verifyGetDefaultProvider(stubGetDefaultParameters);
     }
 
     @Test
-    void testGetDefaultProvidersWithoutProfile(final MockWebServer server) throws Exception {
+    void testGetDefaultProvidersWithoutProfile() throws Exception {
+        UUID stubGetUserProfile = wireMockStubs.userAdminServer.stubGetUserProfile(NO_PROFILE_USER_ID, USER_DEFAULT_PROFILE_JSON);
+        UUID stubGetDefaultProvider = wireMockStubs.loadflowServer.stubGetDefaultProvider(DEFAULT_PROVIDER);
         mockMvc.perform(get("/v1/loadflow-default-provider").header(USER_ID_HEADER, NO_PROFILE_USER_ID)).andExpectAll(
                 status().isOk(),
                 content().string(DEFAULT_PROVIDER));
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + NO_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/default-provider"))); // GET fallback default provider
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfile, NO_PROFILE_USER_ID);
+        wireMockStubs.loadflowServer.verifyGetDefaultProvider(stubGetDefaultProvider);
     }
 
     @Test
-    void testGetDefaultProvidersWithoutParamInProfile(final MockWebServer server) throws Exception {
+    void testGetDefaultProvidersWithoutParamInProfile() throws Exception {
+        UUID stubGetUserProfile = wireMockStubs.userAdminServer.stubGetUserProfile(NO_PARAMS_IN_PROFILE_USER_ID, USER_PROFILE_NO_PARAMS_JSON);
+        UUID stubGetDefaultProvider = wireMockStubs.loadflowServer.stubGetDefaultProvider(DEFAULT_PROVIDER);
         mockMvc.perform(get("/v1/loadflow-default-provider").header(USER_ID_HEADER, NO_PARAMS_IN_PROFILE_USER_ID)).andExpectAll(
                 status().isOk(),
                 content().string(DEFAULT_PROVIDER));
-        var requests = TestUtils.getRequestsDone(2, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + NO_PARAMS_IN_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/default-provider"))); // GET fallback default provider
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfile, NO_PARAMS_IN_PROFILE_USER_ID);
+        wireMockStubs.loadflowServer.verifyGetDefaultProvider(stubGetDefaultProvider);
     }
 
     @Test
-    void testLoadFlowParameters(final MockWebServer server) throws Exception {
+    void testLoadFlowParameters() throws Exception {
         //insert a study
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyNameUserIdUuid = studyEntity.getId();
 
+        UUID stubGetLoadflowParametersUuid = wireMockStubs.loadflowServer.stubGetLoadflowParameters(LOADFLOW_PARAMETERS_UUID_STRING, LOADFLOW_DEFAULT_PARAMETERS_JSON, false);
         //get initial loadFlow parameters
         MvcResult mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)).andExpectAll(
                 status().isOk()).andReturn();
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetLoadflowParametersUuid, LOADFLOW_PARAMETERS_UUID_STRING);
 
         JSONAssert.assertEquals(LOADFLOW_DEFAULT_PARAMETERS_JSON, mvcResult.getResponse().getContentAsString(), JSONCompareMode.NON_EXTENSIBLE);
 
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, LOADFLOW_DEFAULT_PARAMETERS_JSON, "userId", HttpStatus.OK);
+        updateParametersAndDoChecks(studyNameUserIdUuid, LOADFLOW_DEFAULT_PARAMETERS_JSON, LOADFLOW_PARAMETERS_UUID_STRING, "userId", HttpStatus.OK, null, false, null, false);
 
+        stubGetLoadflowParametersUuid = wireMockStubs.loadflowServer.stubGetLoadflowParameters(LOADFLOW_PARAMETERS_UUID_STRING, LOADFLOW_DEFAULT_PARAMETERS_JSON, false);
         //checking update is registered
         mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)).andExpectAll(
                 status().isOk()).andReturn();
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetLoadflowParametersUuid, LOADFLOW_PARAMETERS_UUID_STRING);
 
         JSONAssert.assertEquals(LOADFLOW_DEFAULT_PARAMETERS_JSON, mvcResult.getResponse().getContentAsString(), JSONCompareMode.NON_EXTENSIBLE);
 
-        assertTrue(TestUtils.getRequestsDone(3, server).stream().anyMatch(r -> r.matches("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING)));
-
         StudyEntity studyEntity2 = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, null);
-
         studyNameUserIdUuid = studyEntity2.getId();
 
-        createOrUpdateParametersAndDoChecks(studyNameUserIdUuid, LOADFLOW_DEFAULT_PARAMETERS_JSON, "userId", HttpStatus.OK);
+        createParametersAndDoChecks(studyNameUserIdUuid, LOADFLOW_DEFAULT_PARAMETERS_JSON, "userId", null, false, null);
+        UUID study2loadFlowParametersUuid = studyRepository.findById(studyNameUserIdUuid).orElseThrow().getLoadFlowParametersUuid();
 
+        stubGetLoadflowParametersUuid = wireMockStubs.loadflowServer.stubGetLoadflowParameters(study2loadFlowParametersUuid.toString(), LOADFLOW_DEFAULT_PARAMETERS_JSON, false);
         //get initial loadFlow parameters
         mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/loadflow/parameters", studyNameUserIdUuid)).andExpectAll(
                 status().isOk()).andReturn();
+        wireMockStubs.loadflowServer.verifyGetLoadflowParameters(stubGetLoadflowParametersUuid, study2loadFlowParametersUuid.toString());
 
         JSONAssert.assertEquals(LOADFLOW_DEFAULT_PARAMETERS_JSON, mvcResult.getResponse().getContentAsString(), JSONCompareMode.NON_EXTENSIBLE);
-
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/parameters")));
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING)));
-
     }
 
     @Test
-    void testGetLoadFlowParametersId(final MockWebServer server) throws Exception {
+    void testGetLoadFlowParametersId() throws Exception {
         // Test case 1: Study with existing loadflow parameters
         StudyEntity studyEntity1 = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyWithParametersUuid = studyEntity1.getId();
@@ -875,11 +836,11 @@ class LoadFlowTest {
         // Test case 2: Study without existing loadflow parameters (should create and return default)
         StudyEntity studyEntity2 = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, null);
         UUID studyWithoutParametersUuid = studyEntity2.getId();
-
+        UUID stubCreateLoadflowDefaultParametersUuid = wireMockStubs.loadflowServer.stubCreateLoadflowDefaultParameters(objectMapper.writeValueAsString(LOADFLOW_PARAMETERS_UUID_STRING));
         mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/loadflow/parameters/id", studyWithoutParametersUuid))
                 .andExpect(status().isOk())
                 .andReturn();
-
+        wireMockStubs.loadflowServer.verifyCreateLoadflowDefaultParameters(stubCreateLoadflowDefaultParametersUuid);
         UUID returnedDefaultParametersId = UUID.fromString(mvcResult.getResponse().getContentAsString().replace("\"", ""));
         assertEquals(LOADFLOW_PARAMETERS_UUID, returnedDefaultParametersId); // Should return the default parameters UUID
 
@@ -887,20 +848,18 @@ class LoadFlowTest {
         UUID nonExistentStudyUuid = UUID.randomUUID();
         mockMvc.perform(get("/v1/studies/{studyUuid}/loadflow/parameters/id", nonExistentStudyUuid))
                 .andExpect(status().isNotFound());
-
-        // Verify the appropriate service calls were made
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/parameters/default")));
     }
 
     @Test
-    void testGetStatusNotFound(final MockWebServer server) {
+    void testGetStatusNotFound() {
         UUID notExistingNetworkUuid = UUID.fromString(LOADFLOW_ERROR_RESULT_UUID);
+        UUID loadflowStatusStubUuid = wireMockStubs.loadflowServer.stubGetLoadflowStatus(UUID.fromString(LOADFLOW_ERROR_RESULT_UUID), null, true);
         assertThrows(HttpClientErrorException.NotFound.class, () -> loadFlowService.getLoadFlowStatus(notExistingNetworkUuid), NOT_FOUND.name());
-        assertTrue(TestUtils.getRequestsDone(1, server).stream().anyMatch(r -> r.matches("/v1/results/" + LOADFLOW_ERROR_RESULT_UUID + "/status")));
+        wireMockStubs.loadflowServer.verifyGetLoadflowStatus(loadflowStatusStubUuid, UUID.fromString(LOADFLOW_ERROR_RESULT_UUID));
     }
 
     @Test
-    void testInvalidateNodesAfterLoadflow(final MockWebServer server) throws Exception {
+    void testInvalidateNodesAfterLoadflow() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyUuid = studyEntity.getId();
         UUID rootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyUuid);
@@ -921,7 +880,6 @@ class LoadFlowTest {
         updateNodeBuildStatus(node3.getId(), rootNetworkUuid, BuildStatus.BUILT);
         updateLoadflowResultUuid(node2.getId(), rootNetworkUuid, UUID.fromString(LOADFLOW_RESULT_UUID));
         updateLoadflowResultUuid(node3.getId(), rootNetworkUuid, UUID.fromString(LOADFLOW_OTHER_NODE_RESULT_UUID));
-
         /*
          *      R
          *      |
@@ -934,8 +892,20 @@ class LoadFlowTest {
          *  N3 is security - it will be invalidated
          */
 
+        UUID stubGetUserProfile = wireMockStubs.userAdminServer.stubGetUserProfile(NO_PROFILE_USER_ID, USER_DEFAULT_PROFILE_JSON);
+        UUID stubPutLoadflowParameters = wireMockStubs.loadflowServer.stubPutLoadflowParameters(LOADFLOW_PARAMETERS_UUID_STRING, null);
+        UUID stubPutInvalidateStatus = wireMockStubs.loadflowServer.stubPutInvalidateStatus();
+        UUID stubDeleteLoadflowResults = wireMockStubs.loadflowServer.stubDeleteLoadflowResults(LOADFLOW_OTHER_NODE_RESULT_UUID);
+        UUID stubDeleteReports = wireMockStubs.reportServer.stubDeleteReports();
+
         // run loadflow invalidation on all study after parameter change
         studyService.setLoadFlowParameters(studyUuid, null, NO_PROFILE_USER_ID);
+
+        wireMockStubs.userAdminServer.verifyGetUserProfile(stubGetUserProfile, NO_PROFILE_USER_ID);
+        wireMockStubs.loadflowServer.verifyPutLoadflowParameters(stubPutLoadflowParameters, LOADFLOW_PARAMETERS_UUID_STRING, null);
+        wireMockStubs.loadflowServer.verifyPutInvalidateStatus(stubPutInvalidateStatus);
+        wireMockStubs.loadflowServer.verifyDeleteLoadflowResults(stubDeleteLoadflowResults);
+        wireMockStubs.reportServer.verifyDeleteReports(stubDeleteReports);
 
         // node2 and node3 will be invalidated with their children, but the order in which way they are invalidated is not deterministic
         // this is why we don't check node uuid here for those two calls
@@ -948,20 +918,13 @@ class LoadFlowTest {
         checkUpdateModelStatusMessagesReceived(studyUuid, NotificationService.UPDATE_TYPE_DYNAMIC_SECURITY_ANALYSIS_STATUS);
         checkUpdateModelStatusMessagesReceived(studyUuid, NotificationService.UPDATE_TYPE_COMPUTATION_PARAMETERS);
 
-        var requests = TestUtils.getRequestsDone(5, server);
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/users/" + NO_PROFILE_USER_ID + "/profile")));
-        assertTrue(requests.stream().anyMatch(r -> r.equals("/v1/parameters/" + LOADFLOW_PARAMETERS_UUID_STRING)));
-        assertTrue(requests.stream().anyMatch(r -> r.matches("/v1/results\\?resultsUuids=.*")));
-        assertTrue(requests.stream().anyMatch(r -> r.matches("/v1/reports")));
-        assertTrue(requests.stream().anyMatch(r -> r.matches("/v1/results/invalidate-status\\?resultUuid=.*")));
-
         assertEquals(NodeBuildStatusEmbeddable.from(BuildStatus.BUILT), rootNetworkNodeInfoService.getRootNetworkNodeInfo(node1.getId(), rootNetworkUuid).map(RootNetworkNodeInfoEntity::getNodeBuildStatus).orElseThrow());
         assertEquals(NodeBuildStatusEmbeddable.from(BuildStatus.BUILT), rootNetworkNodeInfoService.getRootNetworkNodeInfo(node2.getId(), rootNetworkUuid).map(RootNetworkNodeInfoEntity::getNodeBuildStatus).orElseThrow());
         assertEquals(NodeBuildStatusEmbeddable.from(BuildStatus.NOT_BUILT), rootNetworkNodeInfoService.getRootNetworkNodeInfo(node3.getId(), rootNetworkUuid).map(RootNetworkNodeInfoEntity::getNodeBuildStatus).orElseThrow());
     }
 
     @Test
-    void testGetLoadFlowModification(final MockWebServer server) throws Exception {
+    void testGetLoadFlowModification() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyUuid = studyEntity.getId();
         UUID rootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyUuid);
@@ -969,31 +932,31 @@ class LoadFlowTest {
         NetworkModificationNode node1 = createNetworkModificationConstructionNode(studyUuid, rootNode.getId(), UUID.randomUUID(), VARIANT_ID, "N1");
         updateLoadflowResultUuid(node1.getId(), rootNetworkUuid, UUID.fromString(LOADFLOW_RESULT_UUID));
 
+        UUID loadflowModificationsStubUuid = wireMockStubs.loadflowServer.stubGetLoadflowModifications(UUID.fromString(LOADFLOW_RESULT_UUID), LOADFLOW_MODIFICATIONS, false);
         MvcResult mvcResult = mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/modifications", studyUuid, rootNetworkUuid, node1.getId()))
             .andExpect(status().isOk())
             .andReturn();
+        wireMockStubs.loadflowServer.verifyGetLoadflowModifications(loadflowModificationsStubUuid, UUID.fromString(LOADFLOW_RESULT_UUID));
 
         assertEquals(LOADFLOW_MODIFICATIONS, mvcResult.getResponse().getContentAsString());
-
-        assertRequestsDone(server, List.of("/v1/results/" + LOADFLOW_RESULT_UUID + "/modifications"));
     }
 
     @Test
-    void testGetLoadFlowModificationNotFound(final MockWebServer server) throws Exception {
+    void testGetLoadFlowModificationNotFound() throws Exception {
         StudyEntity studyEntity = insertDummyStudy(UUID.fromString(NETWORK_UUID_STRING), CASE_LOADFLOW_UUID, LOADFLOW_PARAMETERS_UUID);
         UUID studyUuid = studyEntity.getId();
         UUID rootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(studyUuid);
         RootNode rootNode = getRootNode(studyUuid);
         NetworkModificationNode node1 = createNetworkModificationConstructionNode(studyUuid, rootNode.getId(), UUID.randomUUID(), VARIANT_ID, "N1");
 
+        UUID stubGetLoadflowModificationsUuid = wireMockStubs.loadflowServer.stubGetLoadflowModifications(UUID.fromString(LOADFLOW_ERROR_RESULT_UUID), null, true);
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/modifications", studyUuid, rootNetworkUuid, node1.getId()))
             .andExpect(status().isNotFound());
 
         updateLoadflowResultUuid(node1.getId(), rootNetworkUuid, UUID.fromString(LOADFLOW_ERROR_RESULT_UUID));
         mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}/nodes/{nodeUuid}/loadflow/modifications", studyUuid, rootNetworkUuid, node1.getId()))
             .andExpect(status().isNotFound());
-
-        assertRequestsDone(server, List.of("/v1/results/" + LOADFLOW_ERROR_RESULT_UUID + "/modifications"));
+        wireMockStubs.loadflowServer.verifyGetLoadflowModifications(stubGetLoadflowModificationsUuid, UUID.fromString(LOADFLOW_ERROR_RESULT_UUID));
     }
 
     private void updateNodeBuildStatus(UUID nodeId, UUID rootNetworkUuid, BuildStatus buildStatus) {
@@ -1086,11 +1049,11 @@ class LoadFlowTest {
         assertEquals(studyUuid, headersStatus.get(NotificationService.HEADER_STUDY_UUID));
         assertEquals(NODE_BUILD_STATUS_UPDATED, headersStatus.get(NotificationService.HEADER_UPDATE_TYPE));
         List<UUID> nodesToInvalidate = (List<UUID>) headersStatus.get(NotificationService.HEADER_NODES);
-        checkUpdateModelsStatusMessagesReceived(studyUuid, nodesToInvalidate.get(0));
+        checkUpdateModelsStatusMessagesReceived(studyUuid, nodesToInvalidate.getFirst());
     }
 
     @AfterEach
-    void tearDown(final MockWebServer server) {
+    void tearDown() {
         List<String> destinations = List.of(STUDY_UPDATE_DESTINATION, LOADFLOW_RESULT_DESTINATION, LOADFLOW_STOPPED_DESTINATION, LOADFLOW_FAILED_DESTINATION);
 
         studyRepository.findAll().forEach(s -> networkModificationTreeService.doDeleteTree(s.getId()));
@@ -1099,7 +1062,7 @@ class LoadFlowTest {
         TestUtils.assertQueuesEmptyThenClear(destinations, output);
 
         try {
-            TestUtils.assertServerRequestsEmptyThenShutdown(server);
+            TestUtils.assertWiremockServerRequestsEmptyThenClear(wireMockServer);
         } catch (UncheckedInterruptedException e) {
             LOGGER.error("Error while attempting to get the request done : ", e);
         }
